--- a/content/resources/css/extra-shortcuts-space.css
+++ b/content/resources/css/extra-shortcuts-space.css
@@ -2,8 +2,19 @@
 
 #scSettingsLink{display:none;}
 div#shortcuts, div#shortcuts div.scContainer {width: 324px !important;} 
-#ticker {width:400px !important; left: 235px !important;} 
-div#ticker div { width:400px !important; overflow:hidden !important; white-space:nowrap !important;}
-div#ticker div a { padding:0 2px !important; }
 
+[x-theme="standard"] #ticker, [x-theme="standard"] #ticker div {
+	width: 400px !important;
+}
+[x-theme="simple"] #ticker, [x-theme="simple"] #ticker div {
+	width: 275px !important;
+}
+
+[dir="ltr"][x-theme="standard"] #ticker { left: 235px !important; }
+[dir="ltr"][x-theme="simple"] #ticker { left: 165px !important; }
+[dir="rtl"] #ticker { left: 350px; }
+
+
+#ticker div { overflow:hidden !important; white-space:nowrap !important;}
+#ticker div a { padding:0 2px !important; }
 }
