foxtrick.css: fix typo.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7006 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -45,10 +45,10 @@ h2.ft_boxBodyCollapsed, h2.ft_boxBodyUnfolded {
 	cursor: pointer;
 	background-repeat: no-repeat;
 }
-[dir="ltr"] h2.ft_boxBoxyCollapsed, [dir="ltr"] h2.ft_boxBodyUnfolded {
+[dir="ltr"] h2.ft_boxBodyCollapsed, [dir="ltr"] h2.ft_boxBodyUnfolded {
 	background-position: right;
 }
-[dir="rtl"] h2.ft_boxBoxyCollapsed, [dir="rtl"] h2.ft_boxBodyUnfolded {
+[dir="rtl"] h2.ft_boxBodyCollapsed, [dir="rtl"] h2.ft_boxBodyUnfolded {
 	background-position: left;
 }
 h2.ft_boxBodyCollapsed {
