rtl css tweaking
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7018 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/forum-change-post.css
+++ b/content/resources/css/forum-change-post.css
@@ -25,13 +25,23 @@ div[class="message"] pre, #forum_preview  pre, div[class="feedItem"] pre {font-s
 	width: 12px;
 }
 
-.cfWrapper div.ft-copy-small {
+[dir="ltr"] .cfWrapper div.ft-copy-small {
 	margin-left: 3px;
 	z-index:2;
 }
 
-.cfWrapper a.ft-copy-small img {
+[dir="rtl"] .cfWrapper div.ft-copy-small {
 	margin-right: 3px;
+	z-index:2;
+}
+
+[dir="ltr"] .cfWrapper a.ft-copy-small img {
+	margin-right: 3px;
+	z-index:2;
+}
+
+[dir="rtl"] .cfWrapper a.ft-copy-small img {
+	margin-left: 3px;
 	z-index:2;
 }
 
