(htlive/kit std) header-fix-left fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7024 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/header-fix-left.css
+++ b/content/resources/css/header-fix-left.css
@@ -60,7 +60,7 @@
 [x-theme="standard"] div#mainWrapper>div[class="main mainFull"] {
 	width: 950px !important;
 }
-[x-theme="standard"] div#mainWrapper>div[class="main mainFull"] {
+[x-theme="simple"] div#mainWrapper>div[class="main mainFull"] {
 	width: 765px !important;
 }
 [dir="ltr"][x-theme="standard"] div#mainWrapper>div[class="main mainFull"] {
