--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -30,34 +30,46 @@
 .foxtrickScreenshot:hover { background-image: url("chrome://foxtrick/content/resources/img/screenshot-hover.png"); width: 16px; }
 .foxtrickBrowse { background-image: url("chrome://foxtrick/content/resources/img/browse.png"); width: 16px; padding:2px; }
 
-div.ft_sidebarBoxCollapsed, div.ft_sidebarBoxUnfolded, div.ft_sidebarBoxCollapsed_rtl, div.ft_sidebarBoxUnfolded_rtl { cursor: pointer; }
-div.ft_sidebarBoxCollapsed h2 { background-image: url("chrome://foxtrick/content/resources/img/link-down.png"); background-position:right ; background-repeat:no-repeat; }
-div.ft_sidebarBoxUnfolded h2 { background-image: url("chrome://foxtrick/content/resources/img/link-up.png"); background-position: right ; background-repeat:no-repeat; }
-div.ft_sidebarBoxCollapsed_rtl h2 { background-image: url("chrome://foxtrick/content/resources/img/link-down.png"); background-position: left ; background-repeat:no-repeat; }
-div.ft_sidebarBoxUnfolded_rtl h2 { background-image: url("chrome://foxtrick/content/resources/img/link-up.png"); background-position: left ; background-repeat:no-repeat; }
+/**
+ * expanders
+ * TODO - use attribute expanded to denote whether expanded
+ */
 
-/* h2 dropdown */
-h2.ft_boxBodyCollapsed, h2.ft_boxBodyUnfolded {
+.ft-expander-unexpanded, .ft-expander-expanded,
+div.ft-expander-unexpanded h2, div.ft-expander-expanded h2 {
 	cursor: pointer;
 	background-repeat: no-repeat;
 }
-[dir="ltr"] h2.ft_boxBodyCollapsed, [dir="ltr"] h2.ft_boxBodyUnfolded {
+[dir="ltr"] .ft-expander-unexpanded, [dir="ltr"] .ft-expander-expanded,
+[dir="ltr"] div.ft-expander-unexpanded h2, [dir="ltr"] div.ft-expander-expanded h2 {
 	background-position: right;
 }
-[dir="rtl"] h2.ft_boxBodyCollapsed, [dir="rtl"] h2.ft_boxBodyUnfolded {
+[dir="rtl"] .ft-expander-unexpanded, [dir="rtl"] .ft-expander-expanded,
+[dir="rtl"] div.ft-expander-unexpanded h2, [dir="rtl"] div.ft-expander-expanded h2 {
 	background-position: left;
 }
-h2.ft_boxBodyCollapsed {
-	background-image: url("chrome://foxtrick/content/resources/img/down.gif");
+
+/* div expanders */
+div.ft-expander-unexpanded h2 {
+	background-image: url("chrome://foxtrick/content/resources/img/link-down.png");
 }
-h2.ft_boxBodyUnfolded {
-	background-image: url("chrome://foxtrick/content/resources/img/up.gif");
+div.ft-expander-expanded h2 {
+	background-image: url("chrome://foxtrick/content/resources/img/link-up.png");
 }
 
-/* sidebarbox h3 dropdown image */
-h3.ft_sidebarBoxCollapsed, h3.ft_sidebarBoxUnfolded { cursor: pointer; padding-right: 20px !important; background-repeat: no-repeat; background-position: right; }
-h3.ft_sidebarBoxCollapsed { background-image: url("chrome://foxtrick/content/resources/img/down.gif"); }
-h3.ft_sidebarBoxUnfolded { background-image: url("chrome://foxtrick/content/resources/img/up.gif"); }
+/* h2/h3 expanders */
+h2.ft-expander-unexpanded, h3.ft-expander-unexpanded {
+	background-image: url("chrome://foxtrick/content/resources/img/down.gif");
+}
+h2.ft-expander-expanded, h3.ft-expander-expanded {
+	background-image: url("chrome://foxtrick/content/resources/img/up.gif");
+}
+[dir="ltr"] h3.ft-expander-unexpanded, [dir="ltr"] h3.ft-expander-expanded {
+	padding-right: 20px !important;
+}
+[dir="rtl"] h3.ft-expander-unexpanded, [dir="rtl"] h3.ft-expander-expanded {
+	padding-right: 20px !important;
+}
 
 /*Forum HighlighthreadOpener PostID*/
 .ft_slH_PID_right, .ft_slH_PID_left {background-color:#000000!important;}
