--- a/content/resources/css/overlay.css
+++ b/content/resources/css/overlay.css
@@ -3,6 +3,11 @@
 	-moz-box-orient: horizontal;
 }
 
+.ft-pageaction {
+	background: url("chrome://foxtrick/content/resources/img/hattrick-logo.png")  no-repeat scroll 3px center transparent;
+	padding-left: 15px;
+}
+
 toolbar[iconsize="small"] #foxtrick-toolbar-button {
 	list-style-image: url("chrome://foxtrick/skin/icon-16.png");
 }
