preferences.css: adjust #view-by width to fit in small sized windows.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7113 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -163,7 +163,7 @@ html[dir="rtl"] .screenshot
 
 #view-by
 {
-	max-width: 50%;
+	padding-right: 5em;
 	border-bottom: 1px solid #ccc;
 	margin-bottom: 0.5em;
 }
@@ -171,6 +171,12 @@ html[dir="rtl"] .screenshot
 #tabs li
 {
 	border-radius: 5px 5px 0 0;
+}
+
+ul.nav
+{
+	float: left;
+	clear: left;
 }
 
 ul.nav li
