preferences: select teamid for deleting oauth token
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7139 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -125,7 +125,7 @@ html[dir="rtl"] .module-link
 	margin: 0 2em 0 0;
 }
 
-.button-module tr>td
+.button-module tr>td:first-child
 {
 	width: 80%;
 }
