--- a/content/resources/css/copy-ratings.css
+++ b/content/resources/css/copy-ratings.css
@@ -1,7 +1,7 @@
-[x-theme="standard"] .copyicon.ft-copy-ratings {
+[data-theme="standard"] .copyicon.ft-copy-ratings {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyMatchRatings.png");
 }
 
-[x-theme="simple"] .copyicon.ft-copy-ratings {
+[data-theme="simple"] .copyicon.ft-copy-ratings {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyMatchRatings_s.png");
 }
