--- a/content/resources/css/extra-shortcuts-space.css
+++ b/content/resources/css/extra-shortcuts-space.css
@@ -3,15 +3,15 @@
 #scSettingsLink{display:none;}
 div#shortcuts, div#shortcuts div.scContainer {width: 324px !important;}
 
-[x-theme="standard"] #ticker, [x-theme="standard"] #ticker div {
+[data-theme="standard"] #ticker, [data-theme="standard"] #ticker div {
 	width: 400px !important;
 }
-[x-theme="simple"] #ticker, [x-theme="simple"] #ticker div {
+[data-theme="simple"] #ticker, [data-theme="simple"] #ticker div {
 	width: 275px !important;
 }
 
-[dir="ltr"][x-theme="standard"] #ticker { left: 235px !important; }
-[dir="ltr"][x-theme="simple"] #ticker { left: 165px !important; }
+[dir="ltr"][data-theme="standard"] #ticker { left: 235px !important; }
+[dir="ltr"][data-theme="simple"] #ticker { left: 165px !important; }
 [dir="rtl"] #ticker { left: 350px; }
 
 
