--- a/content/resources/css/mobile-enhancements-main.css
+++ b/content/resources/css/mobile-enhancements-main.css
@@ -1,29 +1,29 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-[x-theme='simple'] .subMenu, [x-theme='simple'] #sidebar, [x-theme='simple'] .subMenuConf,[x-theme='simple']  #online
+[data-theme='simple'] .subMenu, [data-theme='simple'] #sidebar, [data-theme='simple'] .subMenuConf,[data-theme='simple']  #online
 	{display:none !important}
-[x-theme='simple'] #header
+[data-theme='simple'] #header
 	{height:auto!important}
-[x-theme='simple'] #shortcuts
+[data-theme='simple'] #shortcuts
 	{top:45px!important}
-[x-theme='simple'] #teamLinks, [x-theme='simple'] #time, [x-theme='simple'] #online, [x-theme='simple'] #ft-local-time, [x-theme='simple'] #ft_rapidid
+[data-theme='simple'] #teamLinks, [data-theme='simple'] #time, [data-theme='simple'] #online, [data-theme='simple'] #ft-local-time, [data-theme='simple'] #ft_rapidid
 	{margin-top:35px!important}
-[x-theme='simple'] #ticker
+[data-theme='simple'] #ticker
 	{top:2px!important}
-[x-theme='simple'] #menu
+[data-theme='simple'] #menu
 	{position:relative !important; height:auto!important; float:left!important; margin: 3px 0!important}
 
-[fennec-theme='forum'][x-theme='simple'] .hattrick,
-[fennec-theme='forum'][x-theme='simple'] .hattrickNoSupporter,
-[fennec-theme='forum'][x-theme='simple'] #page ,
-[fennec-theme='forum'][x-theme='simple'] .main
+[data-fennec-theme='forum'][data-theme='simple'] .hattrick,
+[data-fennec-theme='forum'][data-theme='simple'] .hattrickNoSupporter,
+[data-fennec-theme='forum'][data-theme='simple'] #page ,
+[data-fennec-theme='forum'][data-theme='simple'] .main
 	{width:440px!important}
 /*	{width:530px!important} */
 
 
-[fennec-theme='default'][x-theme='simple'] .hattrick,
-[fennec-theme='default'][x-theme='simple'] .hattrickNoSupporter,
-[fennec-theme='default'][x-theme='simple'] #page
+[data-fennec-theme='default'][data-theme='simple'] .hattrick,
+[data-fennec-theme='default'][data-theme='simple'] .hattrickNoSupporter,
+[data-fennec-theme='default'][data-theme='simple'] #page
 	{width:440px!important}
 
 }
