--- a/content/resources/css/rapidid.css
+++ b/content/resources/css/rapidid.css
@@ -1,7 +1,7 @@
-[x-theme="standard"] #ft_rapidid { margin-top: 9px; margin-left: 7px; }
-[x-theme="simple"] #ft_rapidid { margin-top: 20px; margin-left: 5px; }
+[data-theme="standard"] #ft_rapidid { margin-top: 9px; margin-left: 7px; }
+[data-theme="simple"] #ft_rapidid { margin-top: 20px; margin-left: 5px; }
 
 #ft_rapidid a { cursor: pointer; text-decoration: underline; }
 
-[x-theme="simple"] #ft_rapidid_form { font-size: 1.1em; }
-[x-theme="simple"] #ft_rapidid_container { font-size: 100%; }
+[data-theme="simple"] #ft_rapidid_form { font-size: 1.1em; }
+[data-theme="simple"] #ft_rapidid_container { font-size: 100%; }
