Use more specific selectors when using attribute selectors in CSS.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7198 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/copy-ratings.css
+++ b/content/resources/css/copy-ratings.css
@@ -1,7 +1,7 @@
-[data-theme="standard"] .copyicon.ft-copy-ratings {
+html[data-theme="standard"] .copyicon.ft-copy-ratings {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyMatchRatings.png");
 }
 
-[data-theme="simple"] .copyicon.ft-copy-ratings {
+html[data-theme="simple"] .copyicon.ft-copy-ratings {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyMatchRatings_s.png");
 }
