--- a/content/resources/css/copy-player-ad.css
+++ b/content/resources/css/copy-player-ad.css
@@ -1,7 +1,7 @@
-[data-theme="standard"] .copyicon.ft-copy-player-ad {
+html[data-theme="standard"] .copyicon.ft-copy-player-ad {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyPlayerAd.png");
 }
 
-[data-theme="simple"] .copyicon.ft-copy-player-ad {
+html[data-theme="simple"] .copyicon.ft-copy-player-ad {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyPlayerAd_s.png");
 }
