--- a/content/resources/css/extra-shortcuts-space.css
+++ b/content/resources/css/extra-shortcuts-space.css
@@ -3,16 +3,16 @@
 #scSettingsLink{display:none;}
 div#shortcuts, div#shortcuts div.scContainer {width: 324px !important;}
 
-[data-theme="standard"] #ticker, [data-theme="standard"] #ticker div {
+html[data-theme="standard"] #ticker, html[data-theme="standard"] #ticker div {
 	width: 400px !important;
 }
-[data-theme="simple"] #ticker, [data-theme="simple"] #ticker div {
+html[data-theme="simple"] #ticker, html[data-theme="simple"] #ticker div {
 	width: 275px !important;
 }
 
-[dir="ltr"][data-theme="standard"] #ticker { left: 235px !important; }
-[dir="ltr"][data-theme="simple"] #ticker { left: 165px !important; }
-[dir="rtl"] #ticker { left: 350px; }
+html[dir="ltr"][data-theme="standard"] #ticker { left: 235px !important; }
+html[dir="ltr"][data-theme="simple"] #ticker { left: 165px !important; }
+html[dir="rtl"] #ticker { left: 350px; }
 
 
 #ticker div { overflow:hidden !important; white-space:nowrap !important;}
