--- a/content/resources/css/fixes/RTL_Fixes.css
+++ b/content/resources/css/fixes/RTL_Fixes.css
@@ -1,10 +1,10 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-[dir="rtl"] #shortcuts div, [dir="rtl"] #shortcuts a {
+html[dir="rtl"] #shortcuts div, html[dir="rtl"] #shortcuts a {
 	float: left !important;
 }
 
-[dir="rtl"] div.coachInfo, [dir="rtl"] div.playerInfo {
+html[dir="rtl"] div.coachInfo, html[dir="rtl"] div.playerInfo {
 	float: right !important;
 }
 
