--- a/content/resources/css/forum-change-post.css
+++ b/content/resources/css/forum-change-post.css
@@ -25,22 +25,22 @@ div[class="message"] pre, #forum_preview  pre, div[class="feedItem"] pre {font-s
 	width: 12px;
 }
 
-[dir="ltr"] .cfWrapper div.ft-copy-small {
+html[dir="ltr"] .cfWrapper div.ft-copy-small {
 	margin-left: 3px;
 	z-index:2;
 }
 
-[dir="rtl"] .cfWrapper div.ft-copy-small {
+html[dir="rtl"] .cfWrapper div.ft-copy-small {
 	margin-right: 3px;
 	z-index:2;
 }
 
-[dir="ltr"] .cfWrapper a.ft-copy-small img {
+html[dir="ltr"] .cfWrapper a.ft-copy-small img {
 	margin-right: 3px;
 	z-index:2;
 }
 
-[dir="rtl"] .cfWrapper a.ft-copy-small img {
+html[dir="rtl"] .cfWrapper a.ft-copy-small img {
 	margin-left: 3px;
 	z-index:2;
 }
