--- a/content/resources/css/local-time.css
+++ b/content/resources/css/local-time.css
@@ -1,24 +1,24 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
 /* local clock positions */
-[dir="ltr"] #ft-local-time {
+html[dir="ltr"] #ft-local-time {
 	float: right;
 }
-[dir="rtl"] #ft-local-time {
+html[dir="rtl"] #ft-local-time {
 	float: left;
 }
 
-[data-theme="standard"] #ft-local-time {
+html[data-theme="standard"] #ft-local-time {
 	margin-top: 9px;
 }
-[data-theme="simple"] #ft-local-time {
+html[data-theme="simple"] #ft-local-time {
 	margin-top: 20px;
 }
 
-[dir="ltr"][data-theme="standard"] #ft-local-time {
+html[dir="ltr"][data-theme="standard"] #ft-local-time {
 	margin-left: 7px;
 }
-[dir="ltr"][data-theme="simple"] #ft-local-time {
+html[dir="ltr"][data-theme="simple"] #ft-local-time {
 	margin-left: 5px;
 }
 
@@ -38,11 +38,11 @@
 }
 
 /* reserve space for background */
-[dir="ltr"] .date[x-ht-date], [dir="ltr"] #ft-local-time, [dir="ltr"] #time {
+html[dir="ltr"] .date[x-ht-date], html[dir="ltr"] #ft-local-time, html[dir="ltr"] #time {
 	padding-left: 14px !important;
 	background-position: left center;
 }
-[dir="rtl"] .date[x-ht-date], [dir="rtl"] #ft-local-time, [dir="rtl"] #time {
+html[dir="rtl"] .date[x-ht-date], html[dir="rtl"] #ft-local-time, html[dir="rtl"] #time {
 	padding-right: 14px !important;
 	background-position: right center;
 }
