--- a/content/resources/css/mobile-enhancements-left.css
+++ b/content/resources/css/mobile-enhancements-left.css
@@ -1,16 +1,16 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-[data-theme='simple'] .main, [data-theme='simple'] #sidebar, [data-theme='simple'] #header, [data-theme='simple'] #bottom
+html[data-theme='simple'] .main, html[data-theme='simple'] #sidebar, html[data-theme='simple'] #header, html[data-theme='simple'] #bottom
 	{display:none !important}
 
-[data-fennec-theme='forum'][data-theme='simple'] .hattrick,
-[data-fennec-theme='forum'][data-theme='simple'] .hattrickNoSupporter,
-[data-fennec-theme='forum'][data-theme='simple'] #page
+html[data-fennec-theme='forum'][data-theme='simple'] .hattrick,
+html[data-fennec-theme='forum'][data-theme='simple'] .hattrickNoSupporter,
+html[data-fennec-theme='forum'][data-theme='simple'] #page
 	{width:225px!important}
 
-[data-fennec-theme='default'][data-theme='simple'] .hattrick,
-[data-fennec-theme='default'][data-theme='simple'] .hattrickNoSupporter,
-[data-fennec-theme='default'][data-theme='simple'] #page
+html[data-fennec-theme='default'][data-theme='simple'] .hattrick,
+html[data-fennec-theme='default'][data-theme='simple'] .hattrickNoSupporter,
+html[data-fennec-theme='default'][data-theme='simple'] #page
 	{width:125px!important}
 }
 
