--- a/content/resources/css/mobile-enhancements-main.css
+++ b/content/resources/css/mobile-enhancements-main.css
@@ -1,29 +1,29 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-[data-theme='simple'] .subMenu, [data-theme='simple'] #sidebar, [data-theme='simple'] .subMenuConf,[data-theme='simple']  #online
+html[data-theme='simple'] .subMenu, html[data-theme='simple'] #sidebar, html[data-theme='simple'] .subMenuConf, html[data-theme='simple']  #online
 	{display:none !important}
-[data-theme='simple'] #header
+html[data-theme='simple'] #header
 	{height:auto!important}
-[data-theme='simple'] #shortcuts
+html[data-theme='simple'] #shortcuts
 	{top:45px!important}
-[data-theme='simple'] #teamLinks, [data-theme='simple'] #time, [data-theme='simple'] #online, [data-theme='simple'] #ft-local-time, [data-theme='simple'] #ft_rapidid
+html[data-theme='simple'] #teamLinks, html[data-theme='simple'] #time, html[data-theme='simple'] #online, html[data-theme='simple'] #ft-local-time, html[data-theme='simple'] #ft_rapidid
 	{margin-top:35px!important}
-[data-theme='simple'] #ticker
+html[data-theme='simple'] #ticker
 	{top:2px!important}
-[data-theme='simple'] #menu
+html[data-theme='simple'] #menu
 	{position:relative !important; height:auto!important; float:left!important; margin: 3px 0!important}
 
-[data-fennec-theme='forum'][data-theme='simple'] .hattrick,
-[data-fennec-theme='forum'][data-theme='simple'] .hattrickNoSupporter,
-[data-fennec-theme='forum'][data-theme='simple'] #page ,
-[data-fennec-theme='forum'][data-theme='simple'] .main
+html[data-fennec-theme='forum'][data-theme='simple'] .hattrick,
+html[data-fennec-theme='forum'][data-theme='simple'] .hattrickNoSupporter,
+html[data-fennec-theme='forum'][data-theme='simple'] #page ,
+html[data-fennec-theme='forum'][data-theme='simple'] .main
 	{width:440px!important}
 /*	{width:530px!important} */
 
 
-[data-fennec-theme='default'][data-theme='simple'] .hattrick,
-[data-fennec-theme='default'][data-theme='simple'] .hattrickNoSupporter,
-[data-fennec-theme='default'][data-theme='simple'] #page
+html[data-fennec-theme='default'][data-theme='simple'] .hattrick,
+html[data-fennec-theme='default'][data-theme='simple'] .hattrickNoSupporter,
+html[data-fennec-theme='default'][data-theme='simple'] #page
 	{width:440px!important}
 
 }
