--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -40,11 +40,11 @@ div.ft-expander-unexpanded h2, div.ft-expander-expanded h2 {
 	cursor: pointer;
 	background-repeat: no-repeat;
 }
-html[dir="ltr"] .ft-expander-unexpanded, html[dir="ltr"] .ft-expander-expanded,
+html[dir="ltr"][data-theme="simple"] .ft-expander-unexpanded, html[dir="ltr"][data-theme="simple"] .ft-expander-expanded,
 html[dir="ltr"] div.ft-expander-unexpanded h2, html[dir="ltr"] div.ft-expander-expanded h2 {
 	background-position: right;
 }
-html[dir="rtl"] .ft-expander-unexpanded, html[dir="rtl"] .ft-expander-expanded,
+html[dir="rtl"][data-theme="simple"] .ft-expander-unexpanded, html[dir="rtl"][data-theme="simple"] .ft-expander-expanded,
 html[dir="rtl"] div.ft-expander-unexpanded h2, html[dir="rtl"] div.ft-expander-expanded h2 {
 	background-position: left;
 }
